--- a/src/template.html
+++ b/src/template.html
@@ -48,7 +48,7 @@
         <h1 class="hero-title" class="load-hidden">
           Hi, my name is <span class="text-color-main">Farkhod Yuldashev</span>
           <br />
-          I'm the Web Developer you need.
+          I'm the Web Developer you needed.
         </h1>
         <p class="hero-cta" class="load-hidden">
           <a class="cta-btn cta-btn--hero" href="#about">Know more</a>
